--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <!-- Left box for logo -->
         <div class="left">
-            <img src="../img/logo.png" alt="Logo">
+            <img src="img/logo.png" alt="Logo">
             <div>Sujit's Fitness</div>
         </div>
         <!-- Mid box for navbar -->
@@ -47,6 +47,12 @@
             </div>
             <div class="form-group">
                 <input type="text" placeholder="Enter your Locality">
+            </div>
+            <div class="form-group">
+                <input type="text" placeholder="Enter your Email Id">
+            </div>
+            <div class="form-group">
+                <input type="text" placeholder="Enter your Contact Number">
             </div>
             <button class="btn">Submit</button>
         </form>
